--- a/Medicine.Application/Medicine.Application.csproj
+++ b/Medicine.Application/Medicine.Application.csproj
@@ -11,13 +11,13 @@
     <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Validators\" />
-    <Folder Include="Queries\" />
+    <ProjectReference Include="..\Medicine.Domain\Medicine.Domain.csproj" />
   </ItemGroup>
 
 </Project>
