--- a/Medicine.UnitTests/Medicine.UnitTests.csproj
+++ b/Medicine.UnitTests/Medicine.UnitTests.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<RootNamespace>Medicine.UnitTests</RootNamespace>
+	<Authors>Mustafa Khazaee</Authors>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
